cmake_minimum_required(VERSION 3.23)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(128 "128. Longest Consecutive Sequence.cpp")
add_executable(217 "217. Contains Duplicate.cpp")
add_executable(3 "3. Longest Substring Without Repeating Characters .cpp")
add_executable(2225 "2225. Find Players With Zero or One Losses.cpp")
add_executable(525 "525. Contiguous Array.cpp")
add_executable(560. "560. Subarray Sum Equals K.cpp")
add_executable(424 "424. Longest Repeating Character Replacement.cpp")
add_executable(125 "125. Valid Palindrome.cpp")
add_executable(167 "167. Two Sum II - Input Array Is Sorted.cpp")
add_executable(11 "11. Container With Most Water.cpp")
add_executable(15 "15. 3Sum.cpp")
add_executable(70 "70. Climbing Stairs.cpp")
add_executable(746 "746. Min Cost Climbing Stairs.cpp")
add_executable(198 "198. House Robber.cpp")
add_executable(213 "213. House Robber II.cpp")
add_executable(5 "5. Longest Palindromic Substring.cpp")
add_executable(647 "647. Palindromic Substrings.cpp")
add_executable(20 "20. Valid Parentheses.cpp")
add_executable(155 "155. Min Stack.cpp")
add_executable(150 "150. Evaluate Reverse Polish Notation.cpp")
add_executable(739 "739. Daily Temperatures.cpp")
add_executable(42 "42. Trapping Rain Water.cpp")
add_executable(266 "226. Invert Binary Tree.cpp")
add_executable(199 "199. Binary Tree Right Side View.cpp")
add_executable(102 ("102. Binary Tree Level Order Traversal.cpp"))